--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Formulario -->
     <section class="px-10 py-10" id="formStudents">
       <h2 class="uppercase text-lg font-bold mb-6 text-gray-800">Formulario</h2>
-      <form action="#" id="formAdd" class="mt-6">
+      <form id="formAdd" class="mt-6">
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
           <div>
             <label
